# pg_fusion

./: AGENTS.md  AUTHORS  Cargo.toml  README.md
.github/workflows/: ci.yaml
ai/: README.md  architecture.md  gotchas.md  invariants.md
ai/components/: arrow_layout.md  host_runtime.md  import.md  pg_frontend.md  pg_type.md  scan_sql.md  slot_encoder.md
benches/tpch/: README.md
benches/tpch/queries/: q01.sql  q02.sql  q03.sql  q04.sql  q05.sql  q06.sql  q07.sql  q08.sql  q09.sql  q10.sql  q11.sql  q12.sql  q13.sql  q14.sql  q15.sql  q16.sql  q17.sql  q18.sql  q19.sql  q20.sql  q21.sql  q22.sql
benches/tpch/runner/: Cargo.toml
benches/tpch/runner/src/: lib.rs  main.rs
benches/tpch/scripts/: tpch_bench.py
docs/: README.md  _config.yml  architecture.md  benchmarks.md  compatibility-matrix.md  configuration.md  development.md  execution-model.md  glossary.md  index.md  limitations.md  memory-and-pages.md  metrics.md  query-support.md  quickstart.md  roadmap.md  testing.md  workloads.md
page/arrow_layout/src/: access.rs  tests.rs  types.rs
page/batch_encoder/src/: encoder.rs  tests.rs
page/import/: Cargo.toml
page/import/src/: lib.rs  tests.rs
page/plan_codec/: Cargo.toml
page/plan_codec/src/: lib.rs  tests.rs
page/row_encoder/benches/: q05_encode.rs
page/row_encoder/src/: encoder.rs
pg/backend_service/: Cargo.toml  README.md
pg/backend_service/src/: error.rs  explain.rs  lib.rs  source.rs
pg/df_catalog/: Cargo.toml
pg/df_catalog/src/: lib.rs
pg/df_functions/: Cargo.toml  README.md
pg/df_functions/src/: lib.rs  pg_avg.rs  pg_boolout.rs  pg_checked_int_arithmetic.rs  pg_format.rs  pg_interval_out.rs  pg_numeric_round_trunc.rs  pg_quote_literal.rs  pg_scalar_subquery_value.rs  pg_text_typmod.rs
pg/extension/: Cargo.toml  README.md
pg/extension/pg_compat/: README.md  failing.sql  fixtures.sql  limitations.sql  passed.sql
pg/extension/src/: custom_scan.rs  guc.rs  lib.rs  metrics.rs  pg_compat.rs  plan_payload.rs  planner.rs  result_ingress.rs  scan_worker_job.rs  shmem.rs  smoke_tests.rs  utility_hook.rs  worker.rs
pg/frontend/: Cargo.toml  README.md
pg/frontend/src/: codec.rs  compiler.rs  error.rs  ir.rs  lib.rs  lower.rs  operator.rs  resolve.rs  shippability.rs  typed_query.rs
pg/frontend/src/adapter/: common.rs  mod.rs  pg17.rs
pg/frontend/src/adapter/pg17/: clauses.rs  consts.rs  expr.rs  functions.rs  mod.rs  rtable.rs  scope.rs  tests.rs  window.rs
pg/frontend/src/compiler/: aggregate.rs  const_expr.rs  expr.rs  from.rs  join.rs  mod.rs  numeric_arithmetic.rs  projection.rs  refs.rs  sort.rs  subquery.rs  tests.rs  window.rs
pg/plan_builder/: Cargo.toml  README.md
pg/plan_builder/src/: join_reorder.rs  lib.rs  tests.rs
pg/row_estimator_seed/src/: lib.rs
pg/scan_node/src/: cte.rs  lib.rs  page_materialize.rs
pg/scan_sql/: Cargo.toml  README.md
pg/scan_sql/src/: lib.rs  literal.rs  metadata.rs  render.rs  tests.rs  types.rs
pg/slot_encoder/: Cargo.toml  README.md
pg/slot_encoder/src/: datum.rs  encoder.rs  error.rs  tests.rs
pg/slot_import/: Cargo.toml
pg/slot_import/src/: error.rs  lib.rs  projector.rs
pg/slot_scan/src/: plan.rs  types.rs
pg/test/: Cargo.toml
pg/test/src/: backend_service.rs  backend_service_unit.rs  df_catalog.rs  lib.rs  page_arrow_pipeline.rs  plan_builder.rs  plan_codec.rs  slot_deform_bench.rs  slot_import.rs
pg/type/: Cargo.toml  README.md
pg/type/src/: lib.rs  numeric.rs
runtime/control_transport/: Cargo.toml  README.md
runtime/control_transport/spec/: IMPLEMENTATION_REFINEMENT.md  README.md
runtime/control_transport/spec/bridge/: README.md  SingleSlotBridge.cfg  SingleSlotBridge.tla
runtime/control_transport/spec/lifecycle/: README.md  SingleSlotLifecycle.cfg  SingleSlotLifecycle.tla
runtime/control_transport/spec/micro/: BackendAcquirePublish.cfg  BackendAcquirePublish.deep.cfg  BackendAcquirePublish.tla  FinalizeReuse.cfg  FinalizeReuse.deep.cfg  FinalizeReuse.live.cfg  FinalizeReuse.tla  README.md  RegionLifecycleGate.deadlock.cfg  RegionLifecycleGate.deep.cfg  RegionLifecycleGate.tla  ReinitPreservesOldSlots.cfg  ReinitPreservesOldSlots.deep.cfg  ReinitPreservesOldSlots.live.cfg  ReinitPreservesOldSlots.tla  SlotOwnershipProtocol.cfg  SlotOwnershipProtocol.deep.cfg  SlotOwnershipProtocol.live.cfg  SlotOwnershipProtocol.tla  WorkerClaimPendingReuse.deadlock.cfg  WorkerClaimPendingReuse.deep.cfg  WorkerClaimPendingReuse.live.cfg  WorkerClaimPendingReuse.tla
runtime/control_transport/spec/transport/: README.md  SingleSlotTransport.cfg  SingleSlotTransport.tla
runtime/control_transport/src/: error.rs  lib.rs  process.rs  ring.rs  tests.rs
runtime/control_transport/src/region/: backend.rs  layout.rs  lifecycle.rs  mod.rs  raw.rs  shared.rs  worker.rs
runtime/control_transport/tests/: loom_region_gate.rs  loom_reinit_retention.rs  loom_ring_ready.rs  loom_slot_incarnation.rs  loom_worker_claim.rs
runtime/control_transport/tests/loom_support/: mod.rs
runtime/filter/: Cargo.toml  README.md
runtime/filter/benches/: atomic_bloom.rs
runtime/filter/spec/: README.md  RuntimeFilterLifecycle.cfg  RuntimeFilterLifecycle.tla
runtime/filter/src/: bloom.rs  lib.rs  pool.rs  shared.rs  tests.rs
runtime/filter/tests/: loom_lifecycle.rs
runtime/metrics/: Cargo.toml  README.md
runtime/metrics/src/: lib.rs
runtime/protocol/: Cargo.toml  README.md
runtime/protocol/src/: codec.rs  envelope.rs  error.rs  lib.rs  message.rs  msgpack.rs  scan.rs  session.rs  tests.rs  validation.rs
runtime/worker/: Cargo.toml  README.md
runtime/worker/src/: error.rs  fsm.rs  lib.rs  result_pages.rs  runtime.rs  runtime_filter_plan.rs  scan_exec.rs  scan_flow_driver.rs  spill.rs  spill_metrics.rs  transport_scan_source.rs
runtime/worker/tests/: transport_scan_source.rs
runtime_metrics/: README.md
runtime_metrics/src/: lib.rs
worker_runtime/: Cargo.toml  README.md
worker_runtime/src/: result_pages.rs  runtime.rs  scan_exec.rs
