[workspace]
members = [
  "join_order",
  "lockfree",
  "runtime/control_transport",
  "runtime/filter",
  "runtime/metrics",
  "runtime/protocol",
  "page/pool",
  "page/transfer",
  "page/arrow_layout",
  "page/row_encoder",
  "page/batch_encoder",
  "page/import",
  "page/issuance",
  "page/row_estimator",
  "page/plan_codec",
  "page/plan_flow",
  "page/scan_flow",
  "pg/df_catalog",
  "pg/df_functions",
  "pg/backend_service",
  "pg/plan_builder",
  "pg/statistics",
  "pg/row_estimator_seed",
  "pg/scan_node",
  "pg/scan_sql",
  "pg/slot_scan",
  "pg/slot_encoder",
  "pg/slot_import",
  "pg/extension",
  "runtime/worker",
  "pg/test",
]
resolver = "2"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1

[workspace.dependencies]
pgrx-pg-sys = "0.16"
pgrx = "0.16"
pgrx-tests = "0.16"
arrow-array = "58.3"
arrow-buffer = "58.3"
arrow-data = "58.3"
arrow-ipc = "58.3"
arrow-schema = "58.3"
datafusion-common = "53.1"
datafusion = "53.1"
datafusion-expr = "53.1"
datafusion-sql = "53.1"
datafusion-catalog = "53.1"
datafusion-physical-expr = "53.1"
datafusion-execution = "53.1"
datafusion-proto = "53.1"
