[package]
name = "plan_codec"
version = "25.0.0"
edition = "2021"
description = "Versioned logical-plan codec for PostgreSQL scan nodes"
readme = "README.md"

[lib]
crate-type = ["lib"]
doctest = false

[dependencies]
bytes = "1"
datafusion = { workspace = true }
datafusion-common = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-proto = { workspace = true }
df_functions = { path = "../../pg/df_functions", version = "25.0" }
prost = "0.14"
rmp = "0.8"
rust-fsm = { version = "0.7", features = ["diagram"] }
scan_node = { path = "../../pg/scan_node", version = "25.0" }
scan_sql = { path = "../../pg/scan_sql", version = "25.0" }
smallvec = { version = "1.14", features = ["const_generics", "union"] }
thiserror = "2.0"

[dev-dependencies]
arrow-schema = { workspace = true }
