[package]
name = "pg_fusion"
version = "24.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_fusion"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg17"]
pg17 = ["pgrx/pg17", "pgrx-tests?/pg17"]
pg_test = ["dep:arrow-array", "dep:postgres", "dep:pgrx-tests"]
memory_context_diag = []

[dependencies]
arrow-array = { workspace = true, optional = true }
arrow-schema = { workspace = true }
backend_service = { path = "../backend_service", version = "25.0" }
control_transport = { path = "../../runtime/control_transport", version = "25.0" }
datafusion = { workspace = true }
datafusion-common = "44.0"
datafusion-execution = "44.0"
futures = "0.3"
import = { path = "../../page/import", version = "25.0" }
issuance = { path = "../../page/issuance", version = "25.0" }
plan_flow = { path = "../../page/plan_flow", version = "25.0" }
plan_builder = { path = "../plan_builder", version = "25.0" }
pool = { path = "../../page/pool", version = "25.0" }
row_estimator = { path = "../../page/row_estimator", version = "25.0" }
pgrx = { workspace = true }
pgrx-tests = { workspace = true, optional = true }
postgres = { version = "0.19.10", optional = true }
protocol = { path = "../../runtime/protocol", version = "25.0" }
metrics = { path = "../../runtime/metrics", version = "25.0" }
filter = { path = "../../runtime/filter", version = "25.0" }
scan_node = { path = "../scan_node", version = "25.0" }
slot_import = { path = "../slot_import", version = "25.0" }
thiserror = "2.0"
tokio = { version = "1.36", features = ["rt", "sync"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
transfer = { path = "../../page/transfer", version = "25.0" }
worker = { path = "../../runtime/worker", version = "25.0" }
