[package]
name = "pg_frontend"
version = "25.0.0"
edition = "2021"
description = "Typed PostgreSQL Query tree frontend for DataFusion logical planning"
readme = "README.md"

[lib]
crate-type = ["lib"]
doctest = false

[features]
default = ["pg17"]
pg17 = ["df_catalog/pg17", "pgrx/pg17"]

[dependencies]
arrow-schema = { workspace = true }
datafusion-common = { workspace = true }
datafusion-expr = { workspace = true }
df_catalog = { path = "../df_catalog", version = "25.0" }
pgrx = { workspace = true }
pg_type = { path = "../type", version = "25.0", features = ["datafusion"] }
rmp-serde = "1.3"
scan_sql = { path = "../scan_sql", version = "25.0" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
