[package]
name = "plan_builder"
version = "25.0.0"
edition = "2021"
description = "Backend-side DataFusion logical plan builder for PostgreSQL scan nodes"
readme = "README.md"

[lib]
crate-type = ["lib"]
doctest = false

[features]
default = ["pg17"]
pg17 = ["df_catalog/pg17", "pg_statistics/pg17", "pgrx/pg17"]

[dependencies]
arrow-schema = { workspace = true }
datafusion = { workspace = true }
datafusion-common = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-sql = { workspace = true }
df_catalog = { path = "../df_catalog", version = "25.0" }
df_functions = { path = "../df_functions", version = "25.0" }
join_order = { path = "../../join_order", version = "25.0" }
once_cell = "1.21"
pg_statistics = { path = "../statistics", version = "25.0" }
pgrx = { workspace = true }
scan_node = { path = "../scan_node", version = "25.0" }
scan_sql = { path = "../scan_sql", version = "25.0" }
thiserror = "2.0"

[dev-dependencies]
pg_type = { path = "../type", version = "25.0" }
