[package]
name = "scan_sql"
version = "25.0.0"
edition = "2021"
description = "Compile DataFusion scan pushdown into PostgreSQL SQL"
readme = "README.md"

[lib]
crate-type = ["lib"]
doctest = false

[dependencies]
arrow-schema = { workspace = true }
datafusion-common = { workspace = true }
datafusion-expr = { workspace = true }
pg_type = { path = "../type", version = "25.0", features = ["datafusion"] }
thiserror = "2.0"

[dev-dependencies]
df_functions = { path = "../df_functions", version = "25.0" }
