[package]
name = "slot_encoder"
version = "25.0.0"
edition = "2021"
description = "Direct layout writer for PostgreSQL TupleTableSlot rows"
readme = "README.md"

[lib]
crate-type = ["lib"]
doctest = false

[features]
default = ["pg17"]
pg17 = ["pgrx-pg-sys/pg17"]

[dependencies]
arrow_layout = { path = "../../page/arrow_layout", version = "25.0" }
pgrx-pg-sys = { workspace = true }
pg_type = { path = "../type", version = "25.0" }
row_encoder = { path = "../../page/row_encoder", version = "25.0.0" }
thiserror = "2.0"
