[package]
name = "slot_import"
version = "25.0.0"
edition = "2021"
description = "Project page-backed Arrow batches into PostgreSQL virtual slots"
readme = "README.md"

[lib]
crate-type = ["lib"]
doctest = false

[features]
default = ["pg17"]
pg17 = ["pgrx-pg-sys/pg17", "pgrx/pg17"]

[dependencies]
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
arrow_layout = { path = "../../page/arrow_layout", version = "25.0" }
import = { path = "../../page/import", version = "25.0" }
pgrx = { workspace = true }
pgrx-pg-sys = { workspace = true }
pg_type = { path = "../type", version = "25.0" }
thiserror = "2.0"
transfer = { path = "../../page/transfer", version = "25.0" }
