[package]
name = "control_transport"
version = "25.0.0"
edition = "2021"
description = "Allocation-free shared-memory control transport for backend/worker coordination"
readme = "README.md"

[lib]
crate-type = ["lib"]
doctest = false

[dependencies]
libc = "0.2"
lockfree = { path = "../../lockfree", version = "25.0" }
portable-atomic = "1.13.1"
tracing = "0.1"

[dev-dependencies]
loom = "0.7"
