[package]
name = "pg_fusion_tpch"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
blake3 = "1.5"
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.2"
csv = "1.3"
owo-colors = "4.1"
postgres = "0.19.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tpchgen = "2.0.2"

[dev-dependencies]
tempfile = "3.20"
